compiler/mesh-parser/tests/snapshots/parser_tests__fn_with_where_clause.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"fn print<T>(x :: T) where T: Printable do\\n  x\\nend\")"
---
SOURCE_FILE@0..49
  FN_DEF@0..49
    FN_KW@0..2 "fn"
    WHITESPACE@2..3 " "
    NAME@3..8
      IDENT@3..8 "print"
    GENERIC_PARAM_LIST@8..11
      LT@8..9 "<"
      IDENT@9..10 "T"
      GT@10..11 ">"
    PARAM_LIST@11..19
      L_PAREN@11..12 "("
      PARAM@12..18
        IDENT@12..13 "x"
        WHITESPACE@13..14 " "
        TYPE_ANNOTATION@14..18
          COLON_COLON@14..16 "::"
          WHITESPACE@16..17 " "
          IDENT@17..18 "T"
      R_PAREN@18..19 ")"
    WHITESPACE@19..20 " "
    WHERE_CLAUSE@20..38
      WHERE_KW@20..25 "where"
      WHITESPACE@25..26 " "
      TRAIT_BOUND@26..38
        IDENT@26..27 "T"
        COLON@27..28 ":"
        WHITESPACE@28..29 " "
        IDENT@29..38 "Printable"
    WHITESPACE@38..39 " "
    DO_KW@39..41 "do"
    BLOCK@41..46
      NEWLINE@41..42 "\n"
      WHITESPACE@42..44 "  "
      NAME_REF@44..45
        IDENT@44..45 "x"
      NEWLINE@45..46 "\n"
    END_KW@46..49 "end"
  EOF@49..49 ""
