compiler/mesh-parser/tests/snapshots/parser_tests__for_in_when_filter_snapshot.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"for x in list when x > 0 do\\n  x\\nend\")"
---
SOURCE_FILE@0..35
  FOR_IN_EXPR@0..35
    FOR_KW@0..3 "for"
    WHITESPACE@3..4 " "
    NAME@4..5
      IDENT@4..5 "x"
    WHITESPACE@5..6 " "
    IN_KW@6..8 "in"
    WHITESPACE@8..9 " "
    NAME_REF@9..13
      IDENT@9..13 "list"
    WHITESPACE@13..14 " "
    WHEN_KW@14..18 "when"
    WHITESPACE@18..19 " "
    BINARY_EXPR@19..24
      NAME_REF@19..20
        IDENT@19..20 "x"
      WHITESPACE@20..21 " "
      GT@21..22 ">"
      WHITESPACE@22..23 " "
      LITERAL@23..24
        INT_LITERAL@23..24 "0"
    WHITESPACE@24..25 " "
    DO_KW@25..27 "do"
    BLOCK@27..32
      NEWLINE@27..28 "\n"
      WHITESPACE@28..30 "  "
      NAME_REF@30..31
        IDENT@30..31 "x"
      NEWLINE@31..32 "\n"
    END_KW@32..35 "end"
  EOF@35..35 ""
