compiler/mesh-parser/tests/snapshots/parser_tests__for_loop_binding_can_be_a_tuple_pattern.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"for (n, s) in pairs when n > 1 do\n  n\nend\")"
---
SOURCE_FILE@0..41
  FOR_IN_EXPR@0..41
    FOR_KW@0..3 "for"
    WHITESPACE@3..4 " "
    TUPLE_PAT@4..10
      L_PAREN@4..5 "("
      IDENT_PAT@5..6
        IDENT@5..6 "n"
      COMMA@6..7 ","
      WHITESPACE@7..8 " "
      IDENT_PAT@8..9
        IDENT@8..9 "s"
      R_PAREN@9..10 ")"
    WHITESPACE@10..11 " "
    IN_KW@11..13 "in"
    WHITESPACE@13..14 " "
    NAME_REF@14..19
      IDENT@14..19 "pairs"
    WHITESPACE@19..20 " "
    WHEN_KW@20..24 "when"
    WHITESPACE@24..25 " "
    BINARY_EXPR@25..30
      NAME_REF@25..26
        IDENT@25..26 "n"
      WHITESPACE@26..27 " "
      GT@27..28 ">"
      WHITESPACE@28..29 " "
      LITERAL@29..30
        INT_LITERAL@29..30 "1"
    WHITESPACE@30..31 " "
    DO_KW@31..33 "do"
    BLOCK@33..38
      NEWLINE@33..34 "\n"
      WHITESPACE@34..36 "  "
      NAME_REF@36..37
        IDENT@36..37 "n"
      NEWLINE@37..38 "\n"
    END_KW@38..41 "end"
  EOF@41..41 ""
