compiler/mesh-parser/tests/snapshots/parser_tests__from_import.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"from Math import sqrt, pow\")"
---
SOURCE_FILE@0..26
  FROM_IMPORT_DECL@0..26
    IDENT@0..4 "from"
    WHITESPACE@4..5 " "
    PATH@5..9
      IDENT@5..9 "Math"
    WHITESPACE@9..10 " "
    IMPORT_KW@10..16 "import"
    WHITESPACE@16..17 " "
    IMPORT_LIST@17..26
      NAME@17..21
        IDENT@17..21 "sqrt"
      COMMA@21..22 ","
      WHITESPACE@22..23 " "
      NAME@23..26
        IDENT@23..26 "pow"
  EOF@26..26 ""
