compiler/mesh-parser/tests/snapshots/parser_tests__from_import_paren_multiline.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
assertion_line: 670
expression: "source_and_debug(\"from Math import (\\n  sqrt,\\n  pow\\n)\")"
---
SOURCE_FILE@0..34
  FROM_IMPORT_DECL@0..34
    IDENT@0..4 "from"
    WHITESPACE@4..5 " "
    PATH@5..9
      IDENT@5..9 "Math"
    WHITESPACE@9..10 " "
    IMPORT_KW@10..16 "import"
    WHITESPACE@16..17 " "
    IMPORT_LIST@17..34
      L_PAREN@17..18 "("
      NEWLINE@18..19 "\n"
      WHITESPACE@19..21 "  "
      NAME@21..25
        IDENT@21..25 "sqrt"
      COMMA@25..26 ","
      NEWLINE@26..27 "\n"
      WHITESPACE@27..29 "  "
      NAME@29..32
        IDENT@29..32 "pow"
      NEWLINE@32..33 "\n"
      R_PAREN@33..34 ")"
  EOF@34..34 ""
