compiler/mesh-parser/tests/snapshots/parser_tests__from_import_paren_trailing_comma.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"from Math import (sqrt, pow,)\")"
---
SOURCE_FILE@0..29
  FROM_IMPORT_DECL@0..29
    IDENT@0..4 "from"
    WHITESPACE@4..5 " "
    PATH@5..9
      IDENT@5..9 "Math"
    WHITESPACE@9..10 " "
    IMPORT_KW@10..16 "import"
    WHITESPACE@16..17 " "
    IMPORT_LIST@17..29
      L_PAREN@17..18 "("
      NAME@18..22
        IDENT@18..22 "sqrt"
      COMMA@22..23 ","
      WHITESPACE@23..24 " "
      NAME@24..27
        IDENT@24..27 "pow"
      COMMA@27..28 ","
      R_PAREN@28..29 ")"
  EOF@29..29 ""
