compiler/mesh-parser/tests/snapshots/parser_tests__full_chained_pipes_and_field_access.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: source_and_debug(source)
---
SOURCE_FILE@0..108
  FN_DEF@0..108
    FN_KW@0..2 "fn"
    WHITESPACE@2..3 " "
    NAME@3..10
      IDENT@3..10 "process"
    PARAM_LIST@10..16
      L_PAREN@10..11 "("
      PARAM@11..15
        IDENT@11..15 "data"
      R_PAREN@15..16 ")"
    WHITESPACE@16..17 " "
    DO_KW@17..19 "do"
    BLOCK@19..105
      NEWLINE@19..20 "\n"
      WHITESPACE@20..22 "  "
      PIPE_EXPR@22..104
        PIPE_EXPR@22..70
          FIELD_ACCESS@22..32
            NAME_REF@22..26
              IDENT@22..26 "data"
            DOT@26..27 "."
            IDENT@27..32 "items"
          NEWLINE@32..33 "\n"
          WHITESPACE@33..37 "    "
          PIPE@37..39 "|>"
          WHITESPACE@39..40 " "
          CALL_EXPR@40..70
            NAME_REF@40..46
              IDENT@40..46 "filter"
            ARG_LIST@46..70
              L_PAREN@46..47 "("
              CLOSURE_EXPR@47..69
                FN_KW@47..49 "fn"
                WHITESPACE@49..50 " "
                PARAM_LIST@50..53
                  L_PAREN@50..51 "("
                  PARAM@51..52
                    IDENT@51..52 "x"
                  R_PAREN@52..53 ")"
                WHITESPACE@53..54 " "
                ARROW@54..56 "->"
                WHITESPACE@56..57 " "
                BLOCK@57..65
                  FIELD_ACCESS@57..65
                    NAME_REF@57..58
                      IDENT@57..58 "x"
                    DOT@58..59 "."
                    IDENT@59..65 "active"
                WHITESPACE@65..66 " "
                END_KW@66..69 "end"
              R_PAREN@69..70 ")"
        NEWLINE@70..71 "\n"
        WHITESPACE@71..75 "    "
        PIPE@75..77 "|>"
        WHITESPACE@77..78 " "
        CALL_EXPR@78..104
          NAME_REF@78..81
            IDENT@78..81 "map"
          ARG_LIST@81..104
            L_PAREN@81..82 "("
            CLOSURE_EXPR@82..103
              FN_KW@82..84 "fn"
              WHITESPACE@84..85 " "
              PARAM_LIST@85..88
                L_PAREN@85..86 "("
                PARAM@86..87
                  IDENT@86..87 "x"
                R_PAREN@87..88 ")"
              WHITESPACE@88..89 " "
              ARROW@89..91 "->"
              WHITESPACE@91..92 " "
              BLOCK@92..99
                FIELD_ACCESS@92..99
                  NAME_REF@92..93
                    IDENT@92..93 "x"
                  DOT@93..94 "."
                  IDENT@94..99 "value"
              WHITESPACE@99..100 " "
              END_KW@100..103 "end"
            R_PAREN@103..104 ")"
      NEWLINE@104..105 "\n"
    END_KW@105..108 "end"
  EOF@108..108 ""
