compiler/mesh-parser/tests/snapshots/parser_tests__full_closure_and_higher_order.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: source_and_debug(source)
---
SOURCE_FILE@0..235
  FN_DEF@0..28
    FN_KW@0..2 "fn"
    WHITESPACE@2..3 " "
    NAME@3..8
      IDENT@3..8 "apply"
    PARAM_LIST@8..14
      L_PAREN@8..9 "("
      PARAM@9..10
        IDENT@9..10 "f"
      COMMA@10..11 ","
      WHITESPACE@11..12 " "
      PARAM@12..13
        IDENT@12..13 "x"
      R_PAREN@13..14 ")"
    WHITESPACE@14..15 " "
    DO_KW@15..17 "do"
    BLOCK@17..25
      NEWLINE@17..18 "\n"
      WHITESPACE@18..20 "  "
      CALL_EXPR@20..24
        NAME_REF@20..21
          IDENT@20..21 "f"
        ARG_LIST@21..24
          L_PAREN@21..22 "("
          NAME_REF@22..23
            IDENT@22..23 "x"
          R_PAREN@23..24 ")"
      NEWLINE@24..25 "\n"
    END_KW@25..28 "end"
  NEWLINE@28..29 "\n"
  NEWLINE@29..30 "\n"
  FN_DEF@30..77
    FN_KW@30..32 "fn"
    WHITESPACE@32..33 " "
    NAME@33..40
      IDENT@33..40 "compose"
    PARAM_LIST@40..46
      L_PAREN@40..41 "("
      PARAM@41..42
        IDENT@41..42 "f"
      COMMA@42..43 ","
      WHITESPACE@43..44 " "
      PARAM@44..45
        IDENT@44..45 "g"
      R_PAREN@45..46 ")"
    WHITESPACE@46..47 " "
    DO_KW@47..49 "do"
    BLOCK@49..74
      NEWLINE@49..50 "\n"
      WHITESPACE@50..52 "  "
      CLOSURE_EXPR@52..73
        FN_KW@52..54 "fn"
        WHITESPACE@54..55 " "
        PARAM_LIST@55..58
          L_PAREN@55..56 "("
          PARAM@56..57
            IDENT@56..57 "x"
          R_PAREN@57..58 ")"
        WHITESPACE@58..59 " "
        ARROW@59..61 "->"
        WHITESPACE@61..62 " "
        BLOCK@62..69
          CALL_EXPR@62..69
            NAME_REF@62..63
              IDENT@62..63 "f"
            ARG_LIST@63..69
              L_PAREN@63..64 "("
              CALL_EXPR@64..68
                NAME_REF@64..65
                  IDENT@64..65 "g"
                ARG_LIST@65..68
                  L_PAREN@65..66 "("
                  NAME_REF@66..67
                    IDENT@66..67 "x"
                  R_PAREN@67..68 ")"
              R_PAREN@68..69 ")"
        WHITESPACE@69..70 " "
        END_KW@70..73 "end"
      NEWLINE@73..74 "\n"
    END_KW@74..77 "end"
  NEWLINE@77..78 "\n"
  NEWLINE@78..79 "\n"
  FN_DEF@79..235
    FN_KW@79..81 "fn"
    WHITESPACE@81..82 " "
    NAME@82..86
      IDENT@82..86 "main"
    PARAM_LIST@86..88
      L_PAREN@86..87 "("
      R_PAREN@87..88 ")"
    WHITESPACE@88..89 " "
    DO_KW@89..91 "do"
    BLOCK@91..232
      NEWLINE@91..92 "\n"
      WHITESPACE@92..94 "  "
      LET_BINDING@94..126
        LET_KW@94..97 "let"
        WHITESPACE@97..98 " "
        NAME@98..104
          IDENT@98..104 "double"
        WHITESPACE@104..105 " "
        EQ@105..106 "="
        WHITESPACE@106..107 " "
        CLOSURE_EXPR@107..126
          FN_KW@107..109 "fn"
          WHITESPACE@109..110 " "
          PARAM_LIST@110..113
            L_PAREN@110..111 "("
            PARAM@111..112
              IDENT@111..112 "x"
            R_PAREN@112..113 ")"
          WHITESPACE@113..114 " "
          ARROW@114..116 "->"
          WHITESPACE@116..117 " "
          BLOCK@117..122
            BINARY_EXPR@117..122
              NAME_REF@117..118
                IDENT@117..118 "x"
              WHITESPACE@118..119 " "
              STAR@119..120 "*"
              WHITESPACE@120..121 " "
              LITERAL@121..122
                INT_LITERAL@121..122 "2"
          WHITESPACE@122..123 " "
          END_KW@123..126 "end"
      NEWLINE@126..127 "\n"
      WHITESPACE@127..129 "  "
      LET_BINDING@129..158
        LET_KW@129..132 "let"
        WHITESPACE@132..133 " "
        NAME@133..136
          IDENT@133..136 "inc"
        WHITESPACE@136..137 " "
        EQ@137..138 "="
        WHITESPACE@138..139 " "
        CLOSURE_EXPR@139..158
          FN_KW@139..141 "fn"
          WHITESPACE@141..142 " "
          PARAM_LIST@142..145
            L_PAREN@142..143 "("
            PARAM@143..144
              IDENT@143..144 "x"
            R_PAREN@144..145 ")"
          WHITESPACE@145..146 " "
          ARROW@146..148 "->"
          WHITESPACE@148..149 " "
          BLOCK@149..154
            BINARY_EXPR@149..154
              NAME_REF@149..150
                IDENT@149..150 "x"
              WHITESPACE@150..151 " "
              PLUS@151..152 "+"
              WHITESPACE@152..153 " "
              LITERAL@153..154
                INT_LITERAL@153..154 "1"
          WHITESPACE@154..155 " "
          END_KW@155..158 "end"
      NEWLINE@158..159 "\n"
      WHITESPACE@159..161 "  "
      LET_BINDING@161..203
        LET_KW@161..164 "let"
        WHITESPACE@164..165 " "
        NAME@165..180
          IDENT@165..180 "double_then_inc"
        WHITESPACE@180..181 " "
        EQ@181..182 "="
        WHITESPACE@182..183 " "
        CALL_EXPR@183..203
          NAME_REF@183..190
            IDENT@183..190 "compose"
          ARG_LIST@190..203
            L_PAREN@190..191 "("
            NAME_REF@191..194
              IDENT@191..194 "inc"
            COMMA@194..195 ","
            WHITESPACE@195..196 " "
            NAME_REF@196..202
              IDENT@196..202 "double"
            R_PAREN@202..203 ")"
      NEWLINE@203..204 "\n"
      WHITESPACE@204..206 "  "
      CALL_EXPR@206..231
        NAME_REF@206..211
          IDENT@206..211 "apply"
        ARG_LIST@211..231
          L_PAREN@211..212 "("
          NAME_REF@212..227
            IDENT@212..227 "double_then_inc"
          COMMA@227..228 ","
          WHITESPACE@228..229 " "
          LITERAL@229..230
            INT_LITERAL@229..230 "5"
          R_PAREN@230..231 ")"
      NEWLINE@231..232 "\n"
    END_KW@232..235 "end"
  EOF@235..235 ""
