compiler/mesh-parser/tests/snapshots/parser_tests__full_complete_module.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: source_and_debug(source)
---
SOURCE_FILE@0..167
  MODULE_DEF@0..167
    MODULE_KW@0..6 "module"
    WHITESPACE@6..7 " "
    NAME@7..18
      IDENT@7..18 "StringUtils"
    WHITESPACE@18..19 " "
    DO_KW@19..21 "do"
    BLOCK@21..164
      NEWLINE@21..22 "\n"
      WHITESPACE@22..24 "  "
      FN_DEF@24..75
        VISIBILITY@24..27
          PUB_KW@24..27 "pub"
        WHITESPACE@27..28 " "
        FN_KW@28..30 "fn"
        WHITESPACE@30..31 " "
        NAME@31..37
          IDENT@31..37 "upcase"
        PARAM_LIST@37..50
          L_PAREN@37..38 "("
          PARAM@38..49
            IDENT@38..39 "s"
            WHITESPACE@39..40 " "
            TYPE_ANNOTATION@40..49
              COLON_COLON@40..42 "::"
              WHITESPACE@42..43 " "
              IDENT@43..49 "String"
          R_PAREN@49..50 ")"
        WHITESPACE@50..51 " "
        TYPE_ANNOTATION@51..60
          ARROW@51..53 "->"
          WHITESPACE@53..54 " "
          IDENT@54..60 "String"
        WHITESPACE@60..61 " "
        DO_KW@61..63 "do"
        BLOCK@63..70
          NEWLINE@63..64 "\n"
          WHITESPACE@64..68 "    "
          NAME_REF@68..69
            IDENT@68..69 "s"
          NEWLINE@69..70 "\n"
        WHITESPACE@70..72 "  "
        END_KW@72..75 "end"
      NEWLINE@75..76 "\n"
      NEWLINE@76..77 "\n"
      WHITESPACE@77..79 "  "
      FN_DEF@79..132
        VISIBILITY@79..82
          PUB_KW@79..82 "pub"
        WHITESPACE@82..83 " "
        FN_KW@83..85 "fn"
        WHITESPACE@85..86 " "
        NAME@86..94
          IDENT@86..94 "downcase"
        PARAM_LIST@94..107
          L_PAREN@94..95 "("
          PARAM@95..106
            IDENT@95..96 "s"
            WHITESPACE@96..97 " "
            TYPE_ANNOTATION@97..106
              COLON_COLON@97..99 "::"
              WHITESPACE@99..100 " "
              IDENT@100..106 "String"
          R_PAREN@106..107 ")"
        WHITESPACE@107..108 " "
        TYPE_ANNOTATION@108..117
          ARROW@108..110 "->"
          WHITESPACE@110..111 " "
          IDENT@111..117 "String"
        WHITESPACE@117..118 " "
        DO_KW@118..120 "do"
        BLOCK@120..127
          NEWLINE@120..121 "\n"
          WHITESPACE@121..125 "    "
          NAME_REF@125..126
            IDENT@125..126 "s"
          NEWLINE@126..127 "\n"
        WHITESPACE@127..129 "  "
        END_KW@129..132 "end"
      NEWLINE@132..133 "\n"
      NEWLINE@133..134 "\n"
      WHITESPACE@134..136 "  "
      FN_DEF@136..163
        FN_KW@136..138 "fn"
        WHITESPACE@138..139 " "
        NAME@139..145
          IDENT@139..145 "helper"
        PARAM_LIST@145..148
          L_PAREN@145..146 "("
          PARAM@146..147
            IDENT@146..147 "x"
          R_PAREN@147..148 ")"
        WHITESPACE@148..149 " "
        DO_KW@149..151 "do"
        BLOCK@151..158
          NEWLINE@151..152 "\n"
          WHITESPACE@152..156 "    "
          NAME_REF@156..157
            IDENT@156..157 "x"
          NEWLINE@157..158 "\n"
        WHITESPACE@158..160 "  "
        END_KW@160..163 "end"
      NEWLINE@163..164 "\n"
    END_KW@164..167 "end"
  EOF@167..167 ""
